--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -10,16 +10,16 @@ authors = ["reka <reka@hey.com>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 typer = {extras = ["all"], version = "0.7.0"}
-rich = "^12.6.0"
+rich = "^12.6.0"  # typer 0.7.0 doesn't support Rich 13.0.0 and above
 
 [tool.poetry.dev-dependencies]
-pytest = "7.1.3"
-pytest-mock = "3.8.2"
-coverage = "6.4.4"
-black = "22.8.0"
-isort = "5.10.1"
-mypy = "0.971"
-flake8 = "5.0.4"
+pytest = "7.2.1"
+pytest-mock = "3.10.0"
+coverage = "7.1.0"
+black = "23.1.0"
+isort = "5.12.0"
+mypy = "1.0.1"
+flake8 = "6.0.0"
 
 [tool.isort]
 profile = "black"
