fix: author not hard-coded

--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -2,7 +2,7 @@
 name = "{{cookiecutter.project_name}}"
 version = "0.1.0"
 description = ""
-authors = ["reka <reka@hey.com>"]
+authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
 
 [tool.poetry.scripts]
 {{cookiecutter.project_name}}= "{{cookiecutter.package_name}}.cli:app"
