--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -9,16 +9,16 @@ authors = ["reka <reka@hey.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-typer = {extras = ["all"], version = "0.7.0"}
-rich = "^12.6.0"  # typer 0.7.0 doesn't support Rich 13.0.0 and above
+typer = {extras = ["all"], version = "0.9.0"}
+rich = "^13.4"
 
 [tool.poetry.dev-dependencies]
-pytest = "7.2.1"
-pytest-mock = "3.10.0"
-coverage = "7.1.0"
-black = "23.1.0"
+pytest = "7.4.0"
+pytest-mock = "3.11.1"
+coverage = "7.2.7"
+black = "23.3.0"
 isort = "5.12.0"
-mypy = "1.0.1"
+mypy = "1.4.1"
 flake8 = "6.0.0"
 
 [tool.isort]
